<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E4E4"
    tools:context=".Fragments.PerfilFragment"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/fondo_cabecera_perfil"
        android:orientation="vertical"
        android:padding="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUser"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:src="@drawable/user_image"
            app:civ_border_overlay="true" />

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/imgUser"
            android:fontFamily="@font/bungee"
            android:includeFontPadding="false"
            android:text="@string/nombre_de_prueba"
            android:textColor="@color/blanco"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtNombre"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/imgUser"
            android:text="@string/email_gmail_com"
            android:textColor="@color/blanco"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="-40dp">

        <com.google.android.material.card.MaterialCardView
            app:cardBackgroundColor="#6774BC"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_baseline_wb_cloudy_24" />

                <TextView
                    android:id="@+id/txtRopa1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/bungee"
                    android:includeFontPadding="false"
                    android:text="@string/camisetas"
                    android:textSize="12sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/txtCamiCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_below="@id/txtRopa1"
                    android:layout_centerInParent="true"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            app:cardBackgroundColor="#6774BC"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_wb_cloudy_24"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/txtRopa2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/bungee"
                    android:includeFontPadding="false"
                    android:text="@string/pantalones"
                    android:textSize="12sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/txtPantCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_below="@id/txtRopa2"
                    android:layout_centerInParent="true"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            app:cardBackgroundColor="#6774BC"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_baseline_wb_cloudy_24" />

                <TextView
                    android:id="@+id/txtRopa3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/bungee"
                    android:includeFontPadding="false"
                    android:text="@string/calzado"
                    android:textSize="12sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/txtCalzCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_below="@id/txtRopa3"
                    android:layout_centerInParent="true"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E8E4E4"
        android:orientation="vertical"
        android:padding="15dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/nombre_completo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNombre2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"

                >

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_email"
                android:drawablePadding="10dp"

                tools:ignore="TextContrastCheck">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:hint="@string/contrase_a">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="10dp"
                android:editable="false"
                tools:ignore="TextContrastCheck">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/forma_btns"
            android:backgroundTint="#6774BC"
            android:fontFamily="@font/bungee"
            android:text="@string/actualizar_informaci_n"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/forma_btns"
            android:fontFamily="@font/bungee"
            android:text="@string/cerrar_sesi_n"
            android:textSize="15sp"
            app:backgroundTint="@color/naranja"
            tools:ignore="TextContrastCheck" />


    </LinearLayout>

</LinearLayout>
